[gd_scene load_steps=40 format=3 uid="uid://wte35drumapp"]

[ext_resource type="PackedScene" uid="uid://c5cke4cm02um7" path="res://scenes/character/plant/plant_000_base.tscn" id="1_3q4dl"]
[ext_resource type="Texture2D" uid="uid://cy3xu8ug3gd2" path="res://assets/reanim/PeaShooter_backleaf.png" id="3_1op7k"]
[ext_resource type="Texture2D" uid="uid://cyknr5ymersct" path="res://assets/reanim/PeaShooter_backleaf_lefttip.png" id="4_vbc7f"]
[ext_resource type="Texture2D" uid="uid://i7fngqj5l36a" path="res://assets/reanim/PeaShooter_backleaf_righttip.png" id="5_dowj6"]
[ext_resource type="Texture2D" uid="uid://yxv2bpco6d57" path="res://assets/reanim/PeaShooter_stalk_bottom.png" id="6_5jjc0"]
[ext_resource type="Texture2D" uid="uid://bu8g84fe1ni48" path="res://assets/reanim/PeaShooter_stalk_top.png" id="7_32i5t"]
[ext_resource type="Texture2D" uid="uid://300aew7liup" path="res://assets/reanim/PeaShooter_frontleaf.png" id="8_vp3q1"]
[ext_resource type="Texture2D" uid="uid://nj6m28m6k5p1" path="res://assets/reanim/PeaShooter_frontleaf_righttip.png" id="9_cu2um"]
[ext_resource type="Texture2D" uid="uid://dit0i5evvco14" path="res://assets/reanim/PeaShooter_frontleaf_lefttip.png" id="10_jf80v"]
[ext_resource type="Texture2D" uid="uid://cqimtpo6uxpvv" path="res://assets/reanim/SunFlower_leftpetal8.png" id="11_uqrih"]
[ext_resource type="Texture2D" uid="uid://dba05af6m14qb" path="res://assets/reanim/SunFlower_leftpetal7.png" id="12_v8486"]
[ext_resource type="Texture2D" uid="uid://f43xv0aun5yb" path="res://assets/reanim/SunFlower_leftpetal6.png" id="13_hddd6"]
[ext_resource type="Texture2D" uid="uid://df06anw7nt00g" path="res://assets/reanim/SunFlower_leftpetal5.png" id="14_j8cc2"]
[ext_resource type="Texture2D" uid="uid://csycwxx4kl7gc" path="res://assets/reanim/SunFlower_leftpetal4.png" id="15_dme1b"]
[ext_resource type="Texture2D" uid="uid://coqi3vpwq3dft" path="res://assets/reanim/SunFlower_leftpetal3.png" id="16_0ok7d"]
[ext_resource type="Texture2D" uid="uid://dj5sy8aolaots" path="res://assets/reanim/SunFlower_leftpetal2.png" id="17_nmejw"]
[ext_resource type="Texture2D" uid="uid://c88ujwcx255a7" path="res://assets/reanim/SunFlower_leftpetal1.png" id="18_pw6u3"]
[ext_resource type="Texture2D" uid="uid://c33g6guw6tx2v" path="res://assets/reanim/SunFlower_bottompetals.png" id="19_dfogl"]
[ext_resource type="Texture2D" uid="uid://dl82be6txvuxn" path="res://assets/reanim/SunFlower_rightpetal9.png" id="20_ue2yt"]
[ext_resource type="Texture2D" uid="uid://bg2vmisbxbjaj" path="res://assets/reanim/SunFlower_rightpetal8.png" id="21_igtt6"]
[ext_resource type="Texture2D" uid="uid://vov3fyb78wmx" path="res://assets/reanim/SunFlower_rightpetal7.png" id="22_ar00w"]
[ext_resource type="Texture2D" uid="uid://bv60pjqhu0vxm" path="res://assets/reanim/SunFlower_rightpetal6.png" id="23_exg78"]
[ext_resource type="Texture2D" uid="uid://bnb4xvrduvnxl" path="res://assets/reanim/SunFlower_rightpetal5.png" id="24_c2iyl"]
[ext_resource type="Texture2D" uid="uid://bds7y48b8uyoq" path="res://assets/reanim/SunFlower_rightpetal4.png" id="25_k4mil"]
[ext_resource type="Texture2D" uid="uid://c36k2lh6ryu1i" path="res://assets/reanim/SunFlower_rightpetal3.png" id="26_uudhq"]
[ext_resource type="Texture2D" uid="uid://b0k8h0fw04b17" path="res://assets/reanim/SunFlower_rightpetal2.png" id="27_5r6pb"]
[ext_resource type="Texture2D" uid="uid://2mhgcxn85ix5" path="res://assets/reanim/SunFlower_rightpetal1.png" id="28_c07id"]
[ext_resource type="Texture2D" uid="uid://cnigbyvgwk626" path="res://assets/reanim/SunFlower_toppetals.png" id="29_2q2wl"]
[ext_resource type="Texture2D" uid="uid://cu06igj1jmdy" path="res://assets/reanim/SunFlower_head.png" id="30_st0ig"]
[ext_resource type="Texture2D" uid="uid://6sig2vr6hn5j" path="res://assets/reanim/SunFlower_blink2.png" id="31_waaya"]
[ext_resource type="Animation" uid="uid://b1ck53g20rabf" path="res://animation/character/plant/002_sun_flower/SunFlower_idle.tres" id="32_571m8"]
[ext_resource type="Script" uid="uid://0hywxqemaott" path="res://scripts/character/components/component_create_sun.gd" id="34_1op7k"]
[ext_resource type="Script" uid="uid://jl0nl4a234bc" path="res://scripts/resources/resource_body_change.gd" id="34_vbc7f"]
[ext_resource type="Texture2D" uid="uid://cyuub21d8s1ih" path="res://assets/reanim/SunFlower_blink1.png" id="35_dowj6"]

[sub_resource type="Resource" id="Resource_5jjc0"]
script = ExtResource("34_vbc7f")
sprite_change = Array[NodePath]([NodePath("../Body/BodyCorrect/Anim_blink")])
sprite_change_texture = Array[Texture2D]([ExtResource("31_waaya"), ExtResource("35_dowj6")])
sprite_appear = Array[NodePath]([])
sprite_disappear = Array[NodePath]([])
node_drop = NodePath("")
metadata/_custom_type_script = "uid://jl0nl4a234bc"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p20s5"]
_data = {
&"SunFlower_idle": ExtResource("32_571m8")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3ucv5"]
animation = &"SunFlower_idle"

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_pq6s2"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_kbloa"]
graph_offset = Vector2(203, 28)
nodes/Animation/node = SubResource("AnimationNodeAnimation_3ucv5")
nodes/Animation/position = Vector2(360, 140)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_pq6s2")
nodes/TimeScale/position = Vector2(660, 140)
nodes/output/position = Vector2(840, 140)
node_connections = [&"TimeScale", 0, &"Animation", &"output", 0, &"TimeScale"]

[node name="Plant002SunFlower" node_paths=PackedStringArray("node_no_change_direction", "speech_influence_components") instance=ExtResource("1_3q4dl")]
plant_type = 2
node_no_change_direction = [NodePath("HpComponent"), NodePath("SleepComponent"), null]
speech_influence_components = [NodePath("CreateSunComponent")]

[node name="BodyCorrect" parent="Body" index="0"]
position = Vector2(-43, -69)

[node name="Backleaf" type="Sprite2D" parent="Body/BodyCorrect" index="0"]
position = Vector2(27.6558, 54.7233)
scale = Vector2(0.571792, 0.476716)
texture = ExtResource("3_1op7k")
centered = false

[node name="Backleaf_left_tip" type="Sprite2D" parent="Body/BodyCorrect" index="1"]
position = Vector2(25.0558, 55.2233)
rotation = 0.0223257
scale = Vector2(0.584467, 0.488391)
skew = 0.00872673
texture = ExtResource("4_vbc7f")
centered = false

[node name="Backleaf_right_tip" type="Sprite2D" parent="Body/BodyCorrect" index="2"]
position = Vector2(47.5, 54.4233)
rotation = 0.0116505
scale = Vector2(0.621609, 0.488391)
skew = 0.00426111
texture = ExtResource("5_dowj6")
centered = false

[node name="Stalk_bottom" type="Sprite2D" parent="Body/BodyCorrect" index="3"]
position = Vector2(37.2233, 50.9767)
rotation = 0.129446
scale = Vector2(0.558558, 0.620609)
skew = -0.045015
texture = ExtResource("6_5jjc0")
centered = false

[node name="Stalk_top" type="Sprite2D" parent="Body/BodyCorrect" index="4"]
position = Vector2(32.835, 38.2092)
rotation = 0.115076
scale = Vector2(0.558675, 0.799842)
skew = -0.0442444
texture = ExtResource("7_32i5t")
centered = false

[node name="Frontleaf" type="Sprite2D" parent="Body/BodyCorrect" index="5"]
position = Vector2(22.5442, 52.9767)
scale = Vector2(0.566675, 0.603259)
texture = ExtResource("8_vp3q1")
centered = false

[node name="Frontleaf_right_tip" type="Sprite2D" parent="Body/BodyCorrect" index="6"]
position = Vector2(55.6883, 54.7325)
rotation = -0.0914117
scale = Vector2(0.658192, 0.611934)
texture = ExtResource("9_cu2um")
centered = false

[node name="Frontleaf_left_tip" type="Sprite2D" parent="Body/BodyCorrect" index="7"]
position = Vector2(19.3, 59.7208)
rotation = 0.0844306
scale = Vector2(0.618492, 0.611375)
texture = ExtResource("10_jf80v")
centered = false

[node name="SunFlower_leftpetal8" type="Sprite2D" parent="Body/BodyCorrect" index="8"]
position = Vector2(25.8792, 43.5442)
rotation = -0.0211036
scale = Vector2(0.8, 0.813208)
skew = 0.0211036
texture = ExtResource("11_uqrih")
centered = false

[node name="SunFlower_leftpetal7" type="Sprite2D" parent="Body/BodyCorrect" index="9"]
position = Vector2(17.6792, 38.5558)
rotation = 0.0501636
scale = Vector2(1.00144, 1.01665)
skew = -0.0501636
texture = ExtResource("12_v8486")
centered = false

[node name="SunFlower_leftpetal6" type="Sprite2D" parent="Body/BodyCorrect" index="10"]
position = Vector2(12.335, 33.3675)
rotation = 0.17123
scale = Vector2(0.81465, 0.813208)
skew = -0.17123
texture = ExtResource("13_hddd6")
centered = false

[node name="SunFlower_leftpetal5" type="Sprite2D" parent="Body/BodyCorrect" index="11"]
position = Vector2(9.13501, 27.4233)
rotation = 0.117576
scale = Vector2(0.806325, 0.813208)
skew = -0.117576
texture = ExtResource("14_j8cc2")
centered = false

[node name="SunFlower_leftpetal4" type="Sprite2D" parent="Body/BodyCorrect" index="12"]
position = Vector2(11.7792, 19.6675)
rotation = 0.0782482
scale = Vector2(0.802883, 0.787792)
skew = -0.0782482
texture = ExtResource("15_dme1b")
centered = false

[node name="SunFlower_leftpetal3" type="Sprite2D" parent="Body/BodyCorrect" index="13"]
position = Vector2(15.7792, 13.7)
rotation = 0.083281
scale = Vector2(0.803442, 0.787792)
skew = -0.083281
texture = ExtResource("16_0ok7d")
centered = false

[node name="SunFlower_leftpetal2" type="Sprite2D" parent="Body/BodyCorrect" index="14"]
position = Vector2(22.935, 8.97666)
rotation = -0.0211036
scale = Vector2(1, 1.02486)
skew = 0.0211036
texture = ExtResource("17_nmejw")
centered = false

[node name="SunFlower_leftpetal1" type="Sprite2D" parent="Body/BodyCorrect" index="15"]
position = Vector2(29.235, 7.07666)
rotation = -0.0211036
scale = Vector2(0.8, 0.852716)
skew = 0.0211036
texture = ExtResource("18_pw6u3")
centered = false

[node name="SunFlower_bottompetals" type="Sprite2D" parent="Body/BodyCorrect" index="16"]
position = Vector2(33.7792, 44.1)
rotation = -0.0211036
scale = Vector2(0.8, 0.813208)
skew = 0.0211036
texture = ExtResource("19_dfogl")
centered = false

[node name="SunFlower_rightpetal9" type="Sprite2D" parent="Body/BodyCorrect" index="17"]
position = Vector2(46.935, 43.0117)
rotation = -0.0211036
scale = Vector2(0.8, 0.813208)
skew = 0.0211036
texture = ExtResource("20_ue2yt")
centered = false

[node name="SunFlower_rightpetal8" type="Sprite2D" parent="Body/BodyCorrect" index="18"]
position = Vector2(51.535, 40.2117)
rotation = -0.0211036
scale = Vector2(0.8, 0.813208)
skew = 0.0211036
texture = ExtResource("21_igtt6")
centered = false

[node name="SunFlower_rightpetal7" type="Sprite2D" parent="Body/BodyCorrect" index="19"]
position = Vector2(55.235, 36.9675)
rotation = -0.0211036
scale = Vector2(0.8, 0.813208)
skew = 0.0211036
texture = ExtResource("22_ar00w")
centered = false

[node name="SunFlower_rightpetal6" type="Sprite2D" parent="Body/BodyCorrect" index="20"]
position = Vector2(60.235, 31.9233)
rotation = -0.0211036
scale = Vector2(0.8, 0.813208)
skew = 0.0211036
texture = ExtResource("23_exg78")
centered = false

[node name="SunFlower_rightpetal5" type="Sprite2D" parent="Body/BodyCorrect" index="21"]
position = Vector2(61.835, 26.1675)
rotation = -0.117373
scale = Vector2(0.807325, 0.813208)
skew = 0.117373
texture = ExtResource("24_c2iyl")
centered = false

[node name="SunFlower_rightpetal4" type="Sprite2D" parent="Body/BodyCorrect" index="22"]
position = Vector2(59.5467, 17.4233)
rotation = -0.12687
scale = Vector2(1.01021, 1.09134)
skew = 0.12687
texture = ExtResource("25_k4mil")
centered = false

[node name="SunFlower_rightpetal3" type="Sprite2D" parent="Body/BodyCorrect" index="23"]
position = Vector2(55.7792, 13.2675)
rotation = -0.108849
scale = Vector2(1.00732, 1.18457)
skew = 0.108849
texture = ExtResource("26_uudhq")
centered = false

[node name="SunFlower_rightpetal2" type="Sprite2D" parent="Body/BodyCorrect" index="24"]
position = Vector2(51.2792, 9.54416)
rotation = -0.0211036
scale = Vector2(0.8, 0.8586)
skew = 0.0211036
texture = ExtResource("27_5r6pb")
centered = false

[node name="SunFlower_rightpetal1" type="Sprite2D" parent="Body/BodyCorrect" index="25"]
position = Vector2(46.035, 6.54416)
rotation = -0.0211036
scale = Vector2(0.8, 0.968474)
skew = 0.0211036
texture = ExtResource("28_c07id")
centered = false

[node name="SunFlower_toppetals" type="Sprite2D" parent="Body/BodyCorrect" index="26"]
position = Vector2(35.435, 5.34416)
rotation = -0.0211036
scale = Vector2(0.8, 1.04805)
skew = 0.0211036
texture = ExtResource("29_2q2wl")
centered = false

[node name="Anim_idle" type="Sprite2D" parent="Body/BodyCorrect" index="27"]
position = Vector2(17.8792, 12.665)
scale = Vector2(0.8, 0.808375)
texture = ExtResource("30_st0ig")
centered = false

[node name="Anim_blink" type="Sprite2D" parent="Body/BodyCorrect" index="28"]
visible = false
position = Vector2(30.2792, 20.7208)
scale = Vector2(0.8, 0.8)
texture = ExtResource("31_waaya")
centered = false

[node name="Marker2DCreateSun" type="Marker2D" parent="Body/BodyCorrect" index="29"]
position = Vector2(43, 27)

[node name="SleepComponent" parent="." index="7" node_paths=PackedStringArray("sleep_influence_components")]
sleep_influence_components = [NodePath("../BlinkComponent"), NodePath("../CreateSunComponent")]

[node name="BlinkComponent" parent="." index="8"]
all_blink_body_change = Array[ExtResource("34_vbc7f")]([SubResource("Resource_5jjc0")])

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="9"]
libraries = {
&"": SubResource("AnimationLibrary_p20s5")
}

[node name="AnimationTree" type="AnimationTree" parent="." index="10"]
tree_root = SubResource("AnimationNodeBlendTree_kbloa")
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../AnimationPlayer")
parameters/TimeScale/scale = 1.2

[node name="CreateSunComponent" type="Node2D" parent="." index="11" node_paths=PackedStringArray("marker_2d_create_sun")]
script = ExtResource("34_1op7k")
marker_2d_create_sun = NodePath("../Body/BodyCorrect/Marker2DCreateSun")

[node name="CreateSunTimer" type="Timer" parent="CreateSunComponent" index="0"]
one_shot = true

[connection signal="timeout" from="CreateSunComponent/CreateSunTimer" to="CreateSunComponent" method="_on_create_sun_timer_timeout"]
